# NDKDoc

./: README.md
GLES3_InstanceDraw/: settings.gradle
GLES3_InstanceDraw/app/: build.gradle
GLES3_InstanceDraw/app/src/androidTest/java/com/lxk/gles3_instancedraw/: ExampleInstrumentedTest.java
GLES3_InstanceDraw/app/src/main/: AndroidManifest.xml
GLES3_InstanceDraw/app/src/main/cpp/: CMakeLists.txt  esUtil.c  gles3_instance_draw.cpp  native-lib.cpp
GLES3_InstanceDraw/app/src/main/java/com/lxk/gles3_instancedraw/: MainActivity.java
GLES3_InstanceDraw/app/src/main/res/layout/: activity_main.xml
GLES3_InstanceDraw/app/src/main/res/values/: strings.xml
GLES3_InstanceDraw/app/src/test/java/com/lxk/gles3_instancedraw/: ExampleUnitTest.java
GLES3_InstanceDraw/gradle/wrapper/: gradle-wrapper.properties
HelloGLES3/: .gitignore  Readme.md  settings.gradle
HelloGLES3/APK/: app-debug.apk
HelloGLES3/app/: build.gradle
HelloGLES3/app/src/main/: AndroidManifest.xml
HelloGLES3/app/src/main/cpp/: CMakeLists.txt  native-gles3.cpp
HelloGLES3/app/src/main/java/com/lxk/hellogles3/: GLES3JNIView.java  GLES3Render.java  MainActivity.java
HelloGLES3/app/src/main/res/values/: strings.xml
HelloGLES3/gradle/wrapper/: gradle-wrapper.properties
HelloNDK/: .gitignore  README.md
HelloNDK/app/: CMakeLists.txt
HelloNDK/app/src/main/: AndroidManifest.xml
HelloNDK/app/src/main/cpp/: array_operation.cpp  encryptor.cpp  hello-ndk.cpp
HelloNDK/app/src/main/java/com/example/myapplication/: Encryptor.java  JniArrayOperation.java  MainActivity.java  TestClass.java
HelloNDK/app/src/main/res/layout/: content_main.xml
HelloNDK/gradle/wrapper/: gradle-wrapper.properties
MyApplication/app/: build.gradle
MyApplication/app/src/androidTest/java/com/lxk/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: native-lib.cpp
MyApplication/app/src/main/java/com/lxk/myapplication/: MainActivity.java
MyApplication/app/src/test/java/com/lxk/myapplication/: ExampleUnitTest.java
MyApplication/gradle/wrapper/: gradle-wrapper.properties
NDKDemo/: .gitignore  Readme.md
NDKDemo/app/: build.gradle
NDKDemo/app/src/main/: AndroidManifest.xml
NDKDemo/app/src/main/cpp/: CMakeLists.txt  LogUtils.h  array_operation.cpp  bitmap.cpp  encryptor.cpp  file_operation.cpp  jni_callback.cpp  list_dir_all_file.cpp
NDKDemo/app/src/main/java/com/lxk/ndkdemo/: Config.java  JniArrayOperation.java  JniBitmapDemo.java  JniCallbackDemo.java  JniFileEncryptor.java  JniFileOperation.java  JniListDirAllFiles.java  MainActivity.java
NDKDemo/app/src/main/res/layout/: activity_main.xml
NDKDemo/app/src/main/res/values/: strings.xml  styles.xml
NDKDemo/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/cpp/: com_example_myapplication_MainActivity.h
app/src/main/java/com/example/myapplication/: MainActivity.java
